kubernetes/02_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: apiops-workshop
    app.kubernetes.io/version: 0.0.1-SNAPSHOT
  name: apiops-workshop
spec:
  ports:
    - name: web
      port: 8080
      targetPort: 8080
  selector:
    app.kubernetes.io/name: apiops-workshop
    app.kubernetes.io/version: 0.0.1-SNAPSHOT
  type: ClusterIP
